2006-09-19  Aaron Bockover  <abock@gnome.org>

	0.11.0 Release

	* NEWS: Updated

2006-09-17  Mike Urbanski <michael.c.urbanski@gmail.com> 

	* plugins/Podcast/UI/ErrorsSource.cs:
	* plugins/Podcast/UI/PodcastErrorsSource.cs: Added.
	
	* plugins/Podcast/HttpDownloadTask.cs: Added additional exception handling.

	* plugins/Podcast/UI/PodcastPlaylistView.cs:
	* plugins/Podcast/UI/PodcastPlaylistModel.cs: Successfully downloaded files 
	that could not be added to the library can no longer be streamed.
		
	* plugins/Podcast/PodcastCore.cs: Now uses 'PodcastErrorSource' to report 
	various errors.

	* plugins/Podcast/PodcastFeedInfo.cs:
	* plugins/Podcast/UI/PodcastSource.cs:		
	* plugins/Podcast/PodcastFeedFetcher.cs:
	* plugins/Podcast/UI/PodcastPropertiesDialog.cs: Minor cleanup. 

2006-09-14  Mike Urbanski <michael.c.urbanski@gmail.com> 
	
	* plugins/Podcast/PodcastPlugin.cs: Initiliaztion of the 'PodcastCore'
	now takes place in the 'InterfaceInitialize' method.

2006-09-13  Aaron Bockover  <abock@gnome.org>

	* plugins/MiniMode/Makefile.am:
	* plugins/Recommendation/Makefile.am:
	* plugins/Makefile.am:
	* plugins/Podcast/Makefile.am:
	* plugins/Radio/Makefile.am:
	* po/POTFILES.in:
	* configure.ac: Fixed any build issues, distcheck works; only 0.11.x
	is now supported; install directly to given prefix without really
	caring exactly where Banshee is to be nice to packagers; do not support
	user-mode plugin installation - pointless; lots of release-prep cleaning;
	disabled the iRadio plugin for now - it's not going to be fixed before
	the 0.11.0 release :-/

	* HACKING:
	* AUTHORS:
	* README: Updated

2006-09-13  Aaron Bockover  <abock@gnome.org>

	* plugins/MiniMode/MiniModeWindow.cs: Added tool tips (Michael Monreal,
	BGO #355844)

2006-09-13  Ruben Vermeersch  <ruben@savanne.be>

	* plugins/MiniMode/MiniModeWindow.cs: Get the default cover from
	Banshee.Base.Branding.

2006-09-08  Mike Urbanski <michael.c.urbanski@gmail.com> 
	